# claude-trace

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/agents/: docs-writer.md  rust-reviewer.md  security-auditor.md
.claude-plugin/hooks/: hooks.json
.claude-plugin/scripts/: check-semconv-compat.sh  coverage-gate.sh  run-clippy.sh
.claude-plugin/skills/backend/: SKILL.md
.claude-plugin/skills/deploy/: SKILL.md
.claude-plugin/skills/hooks/: SKILL.md
.claude-plugin/skills/python-bindings/: SKILL.md
.claude-plugin/skills/release/: SKILL.md
.claude-plugin/skills/rust/: SKILL.md
.claude-plugin/skills/scaffold/: SKILL.md
.claude-plugin/skills/security/: SKILL.md
.claude-plugin/skills/semconv/: SKILL.md
.claude-plugin/skills/test/: SKILL.md
.claude-plugin/skills/ts-bindings/: SKILL.md
.claude-plugin/skills/ui/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  security-audit.yml
crates/claude-trace-wasm/: Cargo.toml
crates/claude-trace-wasm/src/: lib.rs
examples/: basic_instrumentation.py  cost_attribution.py
python/claude_trace/: __init__.py  __init__.pyi  _config.py  _hooks.py  _hooks_cli.py  _instrument.py  _session.py
python/tests/: test_config.py  test_cost.py  test_hooks.py  test_instrument.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/components/: SemconvBrowser.astro  SpanHierarchy.astro
site/src/content/docs/: index.mdx
site/src/content/docs/contributing/: development-setup.mdx  overview.mdx  release-process.mdx  rust-guide.mdx  semconv-proposals.mdx  testing.mdx
site/src/content/docs/getting-started/: concepts.mdx  installation.mdx  quickstart.mdx
site/src/content/docs/guides/: claude-code-hooks.mdx  cost-attribution.mdx  python.mdx  security.mdx  trace-diff.mdx
site/src/content/docs/internals/: architecture.mdx  cost-model.mdx  span-lifecycle.mdx
site/src/content/docs/reference/: configuration.mdx  semconv.mdx
site/src/styles/: custom.css
src/: errors.rs  lib.rs  semconv.rs
src/claude_trace/: __init__.py  config.py  context.py
src/claude_trace/_cost/: __init__.py  calculator.py
src/claude_trace/_diff/: __init__.py  trace_diff.py
src/claude_trace/_instrumentation/: __init__.py  async_client.py  sync_client.py
src/claude_trace/_semconv/: __init__.py  claude.py
src/claude_trace/_spans/: __init__.py  attributes.py  session.py  tool.py  turn.py
src/cost/: calculator.rs  mod.rs
src/diff/: mod.rs
src/python/: mod.rs
src/spans/: mod.rs  session.rs  tool.rs  turn.rs
tests/: __init__.py
tests/unit/: __init__.py  test_cost_calculator.py  test_semconv.py
typescript/: jest.config.ts  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
typescript/src/: _config.ts  _cost.ts  _diff.ts  _instrument.ts  _session.ts  index.ts
typescript/tests/: cost.test.ts  diff.test.ts  instrument.test.ts
