[workspace]
members = [".", "crates/claude-trace-wasm"]
resolver = "2"

[package]
name = "claude-trace"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Zero-configuration OpenTelemetry observability for Claude Agent SDK"
license = "Apache-2.0"
repository = "https://github.com/agentglass/claude-trace"

[lib]
name = "_claude_trace_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
opentelemetry = { version = "0.27", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"], optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"], optional = true }

[features]
default = ["otel"]
otel = ["opentelemetry", "opentelemetry_sdk", "sha2", "hex"]
python = ["pyo3", "otel"]
wasm = []

[dev-dependencies]
opentelemetry_sdk = { version = "0.27", features = ["trace", "testing"] }
insta = { version = "1", features = ["json"] }
