[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "claude-trace"
version = "0.1.0"
description = "Zero-configuration OpenTelemetry observability for Claude Agent SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "agentglass contributors" }]
keywords = ["anthropic", "claude", "opentelemetry", "observability", "agents", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "anthropic>=0.40.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "maturin>=1.9",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/agentglass/claude-trace"
Documentation = "https://agentglass.dev/claude-trace"
Repository = "https://github.com/agentglass/claude-trace"

[tool.maturin]
python-source = "python"
module-name = "claude_trace._claude_trace_core"
features = ["python"]
bindings = "pyo3"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
